# llm-eval-harness

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
configs/: models.yaml  prompts.yaml  retry.yaml
datasets/manifests/: dev.json  smoke.json
docker/: entrypoint.sh
prompts/fever/: system.txt  user.txt
prompts/grounded_qa/: system.txt  user.txt
prompts/multihop_qa/: system.txt  user.txt
src/llm_eval_harness/: __init__.py  cli.py
src/llm_eval_harness/adapters/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  openai_adapter.py
src/llm_eval_harness/annotation/: __init__.py  audit.py
src/llm_eval_harness/dashboard/: __init__.py  app.py
src/llm_eval_harness/datasets/: __init__.py  loaders.py  manifests.py  splits.py
src/llm_eval_harness/metrics/: __init__.py  accuracy.py  cost.py  hallucination.py  latency.py  significance.py
src/llm_eval_harness/prompts/: __init__.py  renderer.py
src/llm_eval_harness/runners/: __init__.py  async_runner.py  sync_runner.py
src/llm_eval_harness/storage/: __init__.py  jsonl_store.py  parquet_store.py
tests/: __init__.py  test_adapters.py  test_metrics.py  test_parsers.py  test_storage.py
